--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "fp-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/app.js",
+  "type": "module",
   "scripts": {
     "lint": "eslint",
     "dev": "nodemon .",
+    "dev:clear": "rimraf uploads/* && mongo localhost/cars --eval 'db.cars.deleteMany({})'",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+    "node": ">=16"
   },
   "author": "",
   "license": "ISC",
@@ -18,12 +23,12 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/mongodb": "^4.0.7",
     "@types/multer": "^1.4.7",
     "eslint": "^8.19.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-functional": "^4.2.1",
-    "nodemon": "^2.0.18"
+    "nodemon": "^2.0.18",
+    "rimraf": "^3.0.2"
   },
   "description": ""
 }
