--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "csv-parser": "^3.0.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "immutable": "^4.1.0",
     "mongodb": "^4.7.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "ramda": "^0.28.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
