--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "csv-parser": "^3.0.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "fantasy-io": "^0.0.1",
+    "fluture": "^14.0.0",
     "immutable": "^4.1.0",
     "mongodb": "^4.7.0",
     "multer": "^1.4.5-lts.1",
-    "ramda": "^0.28.0"
+    "ramda": "^0.28.0",
+    "sanctuary": "^3.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/multer": "^1.4.7",
+    "@types/sanctuary": "^3.1.0",
     "eslint": "^8.19.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-functional": "^4.2.1",
