--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.1",
     "fantasy-io": "^0.0.1",
     "fluture": "^14.0.0",
+    "fluture-node": "^4.0.2",
     "immutable": "^4.1.0",
     "mongodb": "^4.7.0",
     "multer": "^1.4.5-lts.1",
